--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ html{
                     <div class="unclickable">Главная</div>
                     <div class="select-underline"></div>
                 </div>
-                <div class="nav-elem" href="./basics/">
+                <div class="nav-elem" href="basics/index.html">
                     <div class="unclickable">Основы</div>
                     <div class="select-underline"></div>
                 </div>
