--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ html{
         }
         
         body{
+            overflow-x: hidden;
             overflow: visible;
             background-color: var(--background-dark);
             /* background-image: url(https://wallpapers.com/images/hd/beautiful-space-1920-x-1080-background-29oalqubqu5mc1zi.jpg); */
