--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+<div class="page-class">
 <html>
 <style>
 /* Defining colors */
@@ -33,6 +34,9 @@ html{
 <body>
     <!-- Main body style -->
     <style>
+        .page-class{
+          overflow-x: hidden;
+        }
         a{
             color: var(--primary-color-solid);
         }
@@ -350,3 +354,4 @@ html{
 </body>
 
 </html>
+</div>
