--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ html{
         </div>
         <div class="main-content">
             <section id="main-video-section">
-                <iframe id="main-video" src="https://vk.com/video_ext.php?oid=-176128467&id=456239173&hd=4&autoplay=1&loop=1&t00h00m07s&js_api=1&showinfo=0&volume=0" width="1920" height="1080" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
+                <iframe id="main-video" src="https://vk.com/video_ext.php?oid=-176128467&id=456239173&hd=4&autoplay=1&loop=1&t00h00m07s&js_api=1&showinfo=0&volume=0" width="1920" height="1080" allow="autoplay; encrypted-media; screen-wake-lock;" frameborder="0" allowfullscreen="0"></iframe>
                 <div id="main-video-text">
                     <h1>Unreal Engine 5</h1>
                     <h2>краткое руководство</h2>
@@ -333,13 +333,13 @@ html{
                 pagesContainer.style.display = 'flex';
             }
             // Changing video frame size
-            var vidWidth = window.visualViewportWidth;
+            var vidWidth = window.visualViewport.width;
             var vidHeight = vidWidth*9/16;
             mainVideo.style.width = vidWidth + "px";
             mainVideo.style.height = vidHeight + "px";
         }
 
-    
+        
 
         window.onload = function(){
             resize();
