--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ html{
         }
         
         body{
+            width: 100%;
             flex-direction: column;
             overflow: visible;
             height: 100%;
