--- a/index.html
+++ b/index.html
@@ -323,6 +323,7 @@ html{
         const mainVideo = document.getElementById("main-video");
         const filler = document.getElementById("filler");
         const body = document.getElementById("body");
+        const html = document.getElementById("html");
         function showHamburger(){
             if(hamburgerOpen){
                 hamburgerOpen = false;
@@ -366,6 +367,7 @@ html{
             }
             else {filler.style.height = "0px";}
             body.style.width = window.visualViewport.width;
+            html.style.width = window.visualViewport.width;
         }
         window.onscroll = function(){
             resize();
