--- a/index.html
+++ b/index.html
@@ -368,8 +368,8 @@ html{
                 filler.style.height = (vidHeight-scrHeight+vidHeight/8) + "px";
             }
             else {filler.style.height = "0px";}
-            body.style.width = window.visualViewport.width;
-            html.style.width = window.visualViewport.width;
+            body.style.width = window.visualViewport.width + "px";
+            html.style.width = window.visualViewport.width + "px";
         }
         window.onscroll = function(){
             resize();
