--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ html{
         }
         
         body{
-            width: auto;
+            width: 100%;
             position: relative;
             overflow-x: hidden;
             flex-direction: column;
@@ -143,7 +143,7 @@ html{
         }
         .hamb-line{
             display: flex;
-            width: 0.1rem;
+            width: 1.5rem;
             height: 0.2rem;
             background-color: var(--text-light-color);
             margin: 0.3rem;
@@ -351,6 +351,7 @@ html{
                     pagesContainer.style.display = 'none';
                 }
                 mainVideo.style.display = "none";
+                mainVideo.style.width = "0px";
 
             } else if (window.matchMedia('(orientation: landscape)').matches){
                 navbar.style.flexDirection = 'row';
