--- a/gallery/index.html
+++ b/gallery/index.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>UE5 quick guide</title>
-    <link rel="stylesheet" href="../basics/ue5style.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/resources/ue5style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans" >
-    <link rel="icon" href="https://raw.githubusercontent.com/SHAD0W137/ue5guide/b56a05b5c3316335f0fe40f174362e5c7cd5813c/resources/logo.svg">
+    <link rel="icon" href="https://raw.githubusercontent.com/SHAD0W137/ue5guide/f044dc7a8715882fbd658495a27b8c6e63833dc8/resources/logo-light.svg">
 </head>
 <body id="body">
     <!-- Navbar -->
@@ -57,12 +57,26 @@
         <div class="main-content" id="main-content" style="margin-left: 0;">
             <h1>Галерея</h1>
             <div class="gallery">
-                <img class="gallery-image" src="https://cdn2.unrealengine.com/ue5-nextgen-block-v01-1920x1080-91e408f9f99f.jpg?resize=1&w=1920" alt="Image 1">
-                <img class="gallery-image" src="https://cdn2.unrealengine.com/Unreal+Engine%2Fblog%2Fa-first-look-at-unreal-engine-5%2FUE5_Announcement_Feed_Large-1920x1080-8c8ab609059186399d92ca5dc8a748e62880e0e7.jpg" alt="Image 2">
-                <img class="gallery-image" src="https://cdn2.unrealengine.com/uefn-for-ue-com-06-1920x1080-17deff3276d7.png?resize=1&w=1920" alt="Image 3">
-                <img class="gallery-image" src="https://assetsio.gnwcdn.com/digitalfoundry-2020-unreal-engine-5-playstation-5-tech-demo-analysis-1589464603264.jpg?width=1200&height=1200&fit=bounds&quality=70&format=jpg&auto=webp" alt="Image 4">
-                <img class="gallery-image" src="https://static.tildacdn.com/tild6235-3235-4961-b935-616263616131/unreal-engine-5-2-fe.jpg" alt="Image 5">
-                <img class="gallery-image" src="https://cdn2.unrealengine.com/Unreal+Engine%2Fblog%2Fa-first-look-at-unreal-engine-5%2FUnreal_Engine_5_Gallery_1_ALT-2160x1214-6599ca93295364b5d9cd0c34a203426baf38c4b8.jpg?resize=1&w=1200" alt="Image 6">
+                <img class="gallery-image" src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/gallery/1.avif" alt="Image">
+                <img class="gallery-image" src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/gallery/2.jpg" alt="Image">
+                <img class="gallery-image" src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/gallery/3.avif" alt="Image">
+                <img class="gallery-image" src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/gallery/4.jpg" alt="Image">
+                <img class="gallery-image" src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/gallery/5.webp" alt="Image">
+                <img class="gallery-image" src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/gallery/6.webp" alt="Image">
+                <img class="gallery-image" src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/gallery/7.jpg" alt="Image">
+                <img class="gallery-image" src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/gallery/8.jpg" alt="Image">
+                <img class="gallery-image" src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/gallery/9.jpg" alt="Image">
+                <img class="gallery-image" src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/gallery/10.jpg" alt="Image">
+                <img class="gallery-image" src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/gallery/11.jpg" alt="Image">
+                <img class="gallery-image" src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/gallery/12.jpg" alt="Image">
+                <img class="gallery-image" src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/gallery/13.jpg" alt="Image">
+                <img class="gallery-image" src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/gallery/14.jpg" alt="Image">
+                <img class="gallery-image" src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/gallery/15.jpg" alt="Image">
+                <img class="gallery-image" src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/gallery/16.jpg" alt="Image">
+                <img class="gallery-image" src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/gallery/17.jpg" alt="Image">
+                <img class="gallery-image" src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/gallery/18.jpg" alt="Image">
+                <img class="gallery-image" src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/gallery/19.jpg" alt="Image">
+
                 <!-- Add more images as needed -->
               </div>
                 
@@ -71,7 +85,6 @@
     </div>
 
     <!-- Footer -->
-    <div style="height: 10rem;" id="filler"></div>
     <footer id="footer" style="padding-left: 1rem;">
         <div class="footer-element">
             <div class="footer-img">
