--- a/useful/index.html
+++ b/useful/index.html
@@ -80,7 +80,7 @@
                     <img src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/useful/habr.png">
                     <a class="helper-a" href="https://habr.com/ru/articles/344394/">
                     <div class="overlay">
-                        <span>Серия статей по работе в Unreal Engine 5 на вебсайте habr.com</span>
+                        <span>Серия статей по работе в Unreal Engine 5 на сайте тематических коллективных блогов habr.com.</span>
                     </div>
                     </a>
                 </div>
