--- a/index.html
+++ b/index.html
@@ -19,27 +19,27 @@
             </div>
             <div class="pages-container" id="pages-container">
                 <a class="helper-a" href="https://shad0w137.github.io/ue5guide/"> <div class="nav-elem"> 
-                    <div class="unclickable">Главная</div>
+                    <div class="unclickable">Main</div>
                     <div class="select-underline"></div>
                 </div> </a>
                 <a class="helper-a" href="https://shad0w137.github.io/ue5guide/basics/"><div class="nav-elem">
-                    <div class="unclickable">Основы</div>
+                    <div class="unclickable">Basics</div>
                     <div class="select-underline"></div>
                 </div> </a>
                 <a class="helper-a" href="https://shad0w137.github.io/ue5guide/reference/"><div class="nav-elem" >
-                    <div class="unclickable">Справочник</div>
+                    <div class="unclickable">Reference Book</div>
                     <div class="select-underline"></div>
                 </div> </a>
                 <a class="helper-a" href="https://shad0w137.github.io/ue5guide/useful/"><div class="nav-elem" >
-                    <div class="unclickable">Полезное</div>
+                    <div class="unclickable">Useful</div>
                     <div class="select-underline"></div>
                 </div> </a>
                 <a class="helper-a" href="https://shad0w137.github.io/ue5guide/gallery/"><div class="nav-elem" >
-                    <div class="unclickable">Галерея</div>
+                    <div class="unclickable">Gallery</div>
                     <div class="select-underline"></div>
                 </div> </a>
                 <a class="helper-a" href="https://shad0w137.github.io/ue5guide/news/"><div class="nav-elem" >
-                    <div class="unclickable">Новости</div>
+                    <div class="unclickable">News</div>
                     <div class="select-underline"></div>
                 </div> </a>
             </div>
@@ -60,12 +60,12 @@
                 <iframe id="main-video" src="https://vk.com/video_ext.php?oid=-176128467&id=456239173&hd=4&autoplay=1&loop=1&t00h00m07s&js_api=1&showinfo=0&volume=0" width="1920" height="1080" allow="autoplay; encrypted-media; screen-wake-lock;" frameborder="0" allowfullscreen="0"></iframe>
                 <div id="main-video-text">
                     <h1 style="padding-left: 0;">Unreal Engine 5</h1>
-                    <h2 style="padding-left: 0;">краткое руководство</h2>
-                    Unreal Engine 5 — это очередной шаг вперед в развитии игровой графики. Движок представляет несколько значительных усовершенствований в технологии рендеринга и инструментах для разработчиков, призванных расширить границы возможного в мире нереального. Вот главные фишки, что предлагает новый движок Unreal Engine 5:
-                    <br>Nanite — технология виртуализированных микрополигонов, позволяющая добавлять высококачественные и детализированные объекты кинематографического качества непосредственно в движок с минимальной потерей детализации.
-                    <br>Lumen — это решение для глобального освещения, позволяющее создавать динамичное и реалистичное освещение в реальном времени, что обеспечивает более реалистичное взаимодействие света с поверхностями.
-                    <br>MetaHuman Creator — инструмент, помогающий разработчикам быстро создавать высокореалистичных цифровых людей.
-                    <br><br>Данный вебсайт позволит как начать свой путь в сфере игровой разработки на Unreal Engine 5, так и поможет более опытным пользователям быстро получать подсказки по существующим функциям.
+                    <h2 style="padding-left: 0;">short guide</h2>
+                    Unreal Engine 5 — is another step forward in the development of game graphics. The engine introduces several significant improvements in rendering technology and developer tools designed to push the boundaries of what is possible in the world of the unreal. Here are the main features that the new Unreal Engine 5 offers:
+                    <br>Nanite is a virtualized micropolygon technology that allows you to add high-quality, detailed, cinematic-quality objects directly into the engine with minimal loss of detail.
+                    <br>Lumen is a global illumination solution that allows you to create dynamic, realistic lighting in real time, allowing light to interact more realistically with surfaces.
+                    <br>MetaHuman Creator is a tool that helps developers quickly create highly realistic digital humans.
+                    <br><br>This website will help you get started with Unreal Engine 5 game development, as well as help more experienced users quickly get tips on existing features.
                 </div>
             </section>
         </div>
