--- a/useful/index.html
+++ b/useful/index.html
@@ -19,27 +19,27 @@
             </div>
             <div class="pages-container" id="pages-container">
                 <a class="helper-a" href="https://shad0w137.github.io/ue5guide/"> <div class="nav-elem"> 
-                    <div class="unclickable">Главная</div>
+                    <div class="unclickable">Main</div>
                     <div class="select-underline"></div>
                 </div> </a>
                 <a class="helper-a" href="https://shad0w137.github.io/ue5guide/basics/"><div class="nav-elem">
-                    <div class="unclickable">Основы</div>
+                    <div class="unclickable">Basics</div>
                     <div class="select-underline"></div>
                 </div> </a>
                 <a class="helper-a" href="https://shad0w137.github.io/ue5guide/reference/"><div class="nav-elem" >
-                    <div class="unclickable">Справочник</div>
+                    <div class="unclickable">Reference Book</div>
                     <div class="select-underline"></div>
                 </div> </a>
                 <a class="helper-a" href="https://shad0w137.github.io/ue5guide/useful/"><div class="nav-elem" >
-                    <div class="unclickable">Полезное</div>
+                    <div class="unclickable">Useful</div>
                     <div class="select-underline"></div>
                 </div> </a>
                 <a class="helper-a" href="https://shad0w137.github.io/ue5guide/gallery/"><div class="nav-elem" >
-                    <div class="unclickable">Галерея</div>
+                    <div class="unclickable">Gallery</div>
                     <div class="select-underline"></div>
                 </div> </a>
                 <a class="helper-a" href="https://shad0w137.github.io/ue5guide/news/"><div class="nav-elem" >
-                    <div class="unclickable">Новости</div>
+                    <div class="unclickable">News</div>
                     <div class="select-underline"></div>
                 </div> </a>
             </div>
@@ -55,15 +55,15 @@
     <!-- Main site body -->
     <div class="site-container">
         <div class="main-content" id="main-content" style="margin-left: 0;">
-            <h1>Полезные ресурсы</h1>
-            <div class="space">Здесь представлены полезные сайты, где можно найти дополнительные сведения по работе с Unreal Engine 5.</div>
+            <h1>Useful resources</h1>
+            <div class="space">Here are some useful sites where you can find additional information about working with Unreal Engine 5.</div>
             <div class="useful-content-wrap" id="ucw">
                 
                 <div class="useful-content-elem">
                     <img src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/useful/ue5logo.webp">
                     <a class="helper-a" href="https://dev.epicgames.com/documentation/en-us/unreal-engine/unreal-engine-5-5-documentation">
                     <div class="overlay">
-                        <span>Официальная документация Unreal Engine 5. Можно найти информацию по более конкретным функциям движка, а также посмотреть обсуждения на форуме.</span>
+                        <span>Official Unreal Engine 5 documentation. You can find information on more specific engine features, as well as forum discussions.</span>
                     </div>
                     </a>
                 </div>
@@ -72,7 +72,7 @@
                     <img src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/useful/ytguide1.png">
                     <a class="helper-a" href="https://www.youtube.com/watch?v=dWAL0ISKk-E&list=PLDyJYA6aTY1mD7DZA45ZJonX6kb1KnUD2">
                     <div class="overlay">
-                        <span>Небольшой бесплатный видеокурс на платформе YouTube по работе в Unreal Engine 5.</span>
+                        <span>A short free video course on the YouTube platform on working in Unreal Engine 5.</span>
                     </div>
                     </a>
                 </div>
@@ -80,7 +80,7 @@
                     <img src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/useful/habr.png">
                     <a class="helper-a" href="https://habr.com/ru/articles/344394/">
                     <div class="overlay">
-                        <span>Серия статей по работе в Unreal Engine 5 на вебсайте habr.com</span>
+                        <span>A series of articles on working in Unreal Engine 5 on the website habr.com</span>
                     </div>
                     </a>
                 </div>
@@ -88,7 +88,7 @@
                     <img src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/useful/pikabu.png">
                     <a class="helper-a" href="https://pikabu.ru/community/unrealengine">
                     <div class="overlay">
-                        <span>Раздел Unreal Engine в Российском информационно-развлекательном сообществе Пикабу. Можно как найти полезные материалы, так и задать вопросы.</span>
+                        <span>Unreal Engine section in the Russian infotainment community Pikabu. You can find useful materials and ask questions.</span>
                     </div>
                     </a>
                 </div>
@@ -96,7 +96,7 @@
                     <img src="https://raw.githubusercontent.com/SHAD0W137/ue5guide/refs/heads/main/useful/reddit.jpg">
                     <a class="helper-a" href="https://www.reddit.com/r/UnrealEngine5/">
                     <div class="overlay">
-                        <span>Страница Unreal Engine 5 на сайте reddit. В отличие от Пикабу, является англоязычным ресурсом, но можно найти больше разных материалов.</span>
+                        <span>Unreal Engine 5 page on reddit. Unlike Pikabu, it is an English-language resource, but you can find more different materials.</span>
                     </div>
                     </a>
                 </div>
@@ -113,7 +113,7 @@
                 
             </div>
             <div class="footer-text">
-                <h3>Контакты</h3>
+                <h3>Contact me</h3>
                 <div>
                     Telegram:
                     <a id="tg">@shad0w137</a>
