--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>UE5 quick guide</title>
-    <link rel="stylesheet" href="/resources/ue5style.css">
+    <link rel="stylesheet" href="resources/ue5style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans" >
     <link rel="icon" href="https://raw.githubusercontent.com/SHAD0W137/ue5guide/f044dc7a8715882fbd658495a27b8c6e63833dc8/resources/logo-light.svg">
 </head>
